/***********************************************************************
 X3 ChangeLog

2006-05-23  Neil Spierling  <sirvulcan@gmail.com>

	* src/hash.h: Bits needed for other type of host hiding.

	* src/hosthiding.h: Nefarious style 2 host hiding declerations.

	* src/hosthiding.c: This will generated crypted style 2 Nefarious
	hidden hosts and ips. Currently they are just displayed in O3
	WHOIS. Im yet to expand this.

	* src/Makefile.am: Added hosthiding.c and hosthiding.h.

	* src/Makefile.in: Regenerated.

	* src/opserv.c: Display crypted hosts n ips in WHOIS.

	* src/proto-p10.c: Generate crypted hosts n ips on everyone and
	save them in user->crypthost user->cryptip.

2006-05-22  Neil Spierling  <sirvulcan@gmail.com>

	* src/chanserv.c: Set ignores when you authenticate.

	* src/nickserv.c: Added ADDIGNORE, OADDIGNORE, DELIGNORE ODELIGNORE.
	Used for centralized silence list management. Currently set ignores
	can be viewed in ACCOUNTINFO for via ircd SILENCE.

	* src/nickserv.h: Declerations.

	* src/nickserv.help: Added help entries for above commands.

	* src/proto.h: Declerations.

	* src/proto-p10.c: Functions to handle silences

2006-05-18  Alex Schumann  <rubin@afternet.org>

	* src/proto-p10.c: Fixed up the track module a bit more

	* src/hash.c: Fixed up the track module a bit more, including
	reporting correctly when X3 kicks someone. This should affect mrsnoopy
	as well, hopefully wont cause any bugs.

	* src/mod-track.c: Fixed up the track module a bit more - made track
	all/none work

2006-05-18  Alex Schumann  <rubin@afternet.org>

	* src/chanserv.c: adding 'classic' view, via patch submitted by pLaYa

	* src/nickserv.c: adding 'classic' view, via patch submitted by pLaYa

	* src/nickserv.h: adding 'classic' view, via patch submitted by pLaYa

	* src/nickserv.help: adding 'classic' view, via patch submitted by pLaYa

2006-05-18  Alex Schumann  <rubin@afternet.org>

	* src/chanserv.c: re-disabled netrider kicking. Somehow this got included back