@@ -101,7 +101,7 @@
 #define NICKLEN         30
 #define USERLEN         10
 #define HOSTLEN         63
-#define SOCKIPLEN       15
+#define SOCKIPLEN       45
 #define ACCOUNTLEN      15
 #define REALLEN         50
 #define TOPICLEN        250
